--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
-<html>
-   <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-       <link rel="stylesheet" href="index.css">
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="index.css">
+    <title>SurfupSofa</title>
    </head>
    <body>    
        <div class="nav-bar">
@@ -16,3 +21,5 @@
        <script src="./index.pack.js"></script>
    </body>
 </html>
+
+
