--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,32 @@
+
 <!DOCTYPE html>
 <html lang="en">
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <link rel="stylesheet" href="index.css">
-    <title>SurfupSofa</title>
+   <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+       <link rel="stylesheet" href="index.css"/>
+       <title>SurfupSofa</title>
    </head>
    <body>    
        <div class="nav-bar">
            <div class="logo"></div>
-           <h3 class="user-container">Welcome
+           <h3 class="user-container">Welcome back Bobby
                <span id="returning-user"></span>
                <span id="user"></span>
             </h3>
        </div>
        <div class="container">
-         <h5 id="reviews"></h5>         
+           <div class="main-image"></div>
+           <h5 id="reviews"></h5>
+           <button>Get reviews</button>
+           <div class="reviews"></div>        
+           <div class="break"></div>       
+           <h3>Other Properties recommended to you:</h3> 
+           <div class="properties"></div>
        </div>
-       <script src="./index.pack.js"></script>
+       <div class="footer"></div>
+       <script src="main.pack.js"></script>
    </body>
 </html>
 
