Updated html and readme.md file.

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
    <body>    
        <div class="nav-bar">
            <div class="logo"></div>
-           <h3 class="user-container">Welcome back Bobby
-               <span id="returning-user"></span>
+           <h3 class="user-container">
+               <span id="returning-user">Welcome</span>
                <span id="user"></span>
             </h3>
        </div>
